# yaminabe-launcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: bamboo-css.md
src-shared/: Cargo.toml
src-shared/src/: datatypes.rs  error.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  http_utils.rs  lib.rs
src-tauri/src/commands/: curseforge.rs  instance.rs  java.rs  launch.rs  minecraft.rs  mod.rs  modfile.rs  settings.rs
src-tauri/src/install_task/: fabric_like.rs  forge_noprofile.rs  forge_v1.rs  forge_v2.rs  mod.rs  vanilla.rs
src-tauri/src/mod_repo/: curseforge.rs  modrinth.rs
src-ui/: Cargo.toml  Trunk.toml  index.html  styles.css
src-ui/src/: app.rs  components.rs  curseforge.rs  ipc.rs  main.rs  pages.rs
src-ui/src/components/: create_modal.rs  install_modpack_modal.rs  install_sidebar.rs  instance_card.rs  library.rs  navigation.rs  open_in_file_manager.rs  page.rs  settings.rs  ui.rs
src-ui/src/components/ui/: button.rs  input.rs  modal.rs  skeletons.rs  tabbar.rs
src-ui/src/pages/: home.rs  instance_detail.rs  library.rs  play.rs  search.rs  settings.rs
