[workspace]
resolver = "2"
members = ["src-tauri", "src-ui"]

[workspace.package]
edition = "2024"
authors = ["Ign1s-Reiga"]
version = "0.1.0"

[workspace.dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
phosphor-leptos = "0.8"
styled = "0.3"
stylist = "0.13"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
codegen-units = 1
lto = true
