[workspace]
resolver = "2"
members = ["src-shared","src-tauri", "src-ui"]

[workspace.package]
edition = "2024"
authors = ["Ign1s-Reiga"]
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
yaminabe-launcher-shared = { path = "src-shared" }
log = "0.4"

[profile.dev]
opt-level = 1
lto = true

[profile.release]
debug = "line-tables-only"
opt-level = "z"
codegen-units = 1
lto = true
