[package]
name = "yaminabe-launcher"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "yaminabe_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
yaminabe-launcher-shared.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { version = "1", features = ["full"] }
log.workspace = true
zip = "8"
sha1 = "0.11"

