[package]
name = "yaminabe-launcher-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
phosphor-leptos = { workspace = true }
styled = { workspace = true }
stylist = { workspace = true }
uuid = { workspace = true }
bamboo-css-macro = { version = "0.1.0", path = "../../bamboo-css/bamboo-css-macro" }

[dev-dependencies]
bamboo-css-collector = { path = "../../bamboo-css/bamboo-css-collector" }
