[package]
name = "yaminabe-launcher-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
phosphor-leptos = { workspace = true }
uuid = { workspace = true }
yaminabe-launcher-shared = { workspace = true }
bamboo-css-macro = { version = "0.1.0", path = "../../bamboo-css/bamboo-css-macro" }
log = "0.4"

[dev-dependencies]
bamboo-css-collector = { path = "../../bamboo-css/bamboo-css-collector" }
