[package]
name = "yaminabe-launcher-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
phosphor-leptos = "0.8"
yaminabe-launcher-shared.workspace = true
bamboo-css-macro = { version = "0.1.0", path = "../../bamboo-css/bamboo-css-macro" }
log.workspace = true
